Refactor controllers and services for consistency
Unify controller patterns and improve service logic: controllers now use ResponseEntity<Object>, consistent error payloads (ERR_MSG constant), proper HTTP statuses, and improved exception handling. Replaced manual collection builds with stream().toList() for immutability. Aligned service method names and usages (e.g. createAdoptionTracking, createDevolution), added/updated DTO constructors and toEntity mappings (VaccineDTO, Review, Notification, etc.), removed unused imports and unused Lombok annotations from entities, and improved AdopterService validations/logging with constants and lazy self-injection. AdoptionRequestService was refactored to use orElseThrow and transactional readOnly for reads. Overall changes target code quality, SonarQube fixes, and more consistent API behavior.